src/App.scss
//Themeing
.primary-color {
  background-color: #262833;

  color: #ffffff;
}

@import '~antd/dist/antd.css';
$banner-img: url('banner.jpg');

.App {
  text-align: center;
}

.logo {
  height: 40px;
  color: #000;
}

// @media (prefers-reduced-motion: no-preference) {
//   .App-logo {
//     animation: App-logo-spin infinite 20s linear;
//   }
// }

// @keyframes App-logo-spin {
//   from {
//     transform: rotate(0deg);
//   }
//   to {
//     transform: rotate(360deg);
//   }
// }
html,
body {
  min-height: 100%;
  min-width: 100%;
}
#root {
  min-height: 100%;
  display: flex;
}
.container {
  width: 100%;
  display: flex;
  justify-content: center;
  flex: 1;
  min-width: 320px;
}
.container-login {
  display: flex;
  justify-content: center;
  padding: 10px;
  flex: 1;
  height: 100%;
  .form {
    width: 400px;
    margin: auto;
    .login-form-button {
      width: 100%;
    }
    .login-form-button-link {
      text-align: center;
    }
  }
}
/* ----------------------------------------------
 * Generated by Animista on 2021-7-18 20:35:2
 * Licensed under FreeBSD License.
 * See http://animista.net/license for more info. 
 * w: http://animista.net, t: @cssanimista
 * ---------------------------------------------- */

// .tracking-in-contract {
//   -webkit-animation: tracking-in-contract 0.8s
//     cubic-bezier(0.895, 0.03, 0.685, 0.22) both;
//   animation: tracking-in-contract 0.8s cubic-bezier(0.895, 0.03, 0.685, 0.22)
//     both;
// }

// /**
//  * ----------------------------------------
//  * animation tracking-in-contract
//  * ----------------------------------------
//  */
// @-webkit-keyframes tracking-in-contract {
//   0% {
//     letter-spacing: 1em;
//     opacity: 0;
//   }
//   40% {
//     opacity: 0.6;
//   }
//   100% {
//     letter-spacing: normal;
//     opacity: 1;
//   }
// }
// @keyframes tracking-in-contract {
//   0% {
//     letter-spacing: 1em;
//     opacity: 0;
//   }
//   40% {
//     opacity: 0.6;
//   }
//   100% {
//     letter-spacing: normal;
//     opacity: 1;
//   }
// }
//  ANT- DESIGN OVERRIDES
.ant-layout {
  display: flex;
  flex-direction: column;
  width: 100%;
}
.ant-layout-header {
  padding: 0 0;
}
.ant-menu {
  justify-content: flex-end;
  background-color: #262833;
  color: #ffffff;
  .App-logo {
    margin-right: auto;
  }
}

.ant-menu-sub {
  color: #262833;
}

.site-layout-content {
  background-color: #ffffff;
  height: 100%;
}

.ant-drawer-body {
  display: flex;
  flex-direction: column;
  text-align: left;
  padding-top: 1.5rem;
}

.ant-drawer-content-wrapper {
  width: 300px !important;
}
.ant-typography {
  color: #4a4b4e;
}
.ant-layout-header .ant-menu {
  border-bottom: none;
}
//Home page
.home-page-section {
  background-color: #f8f9fa;
  position: relative;
  max-width: 1600px;
  margin: auto;
  min-height: 500px;
  padding: 20px;
  margin-bottom: 40px;
}
.home-banner-container {
  position: relative;
}
.home-banner-video-container {
  position: absolute;
  height: 100%;
  background: $banner-img;
  background-size: cover;
  background-repeat: no-repeat;
  width: 100%;
}
.home-banner-video {
  object-fit: cover;
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 0;
  top: 0;
  left: 0;
}
.banner-video-tint {
  content: ''; // ::before and ::after both require content
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-image: linear-gradient(352deg, #000000b6, #6b8c96);
  opacity: 0.5;
}
.home-banner-video::after {
  content: ''; // ::before and ::after both require content
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-image: linear-gradient(120deg, #eaee44, #33d0ff);
  opacity: 0.7;
}
.home-landing-title {
  color: #696969;
}
.home-feature-sections {
  margin: 20px 0;
}
.home-page-text-wrapper {
  border-radius: 3rem;
  max-width: 400px;
  margin: 20px 0;
}

.home-feature-image-wrapper {
  overflow: hidden;
  img {
    max-height: 500px;
    width: 100%;
  }
}
.feature-divider {
  color: #5d5d5d;
}

//FORUM styles
.forum-wrapper {
  height: 100%;
}
.forum-container {
  max-width: 1600px;
}
.forum-pageselect-radio {
  margin: 20px auto;
}
.forum-page-wrapper {
  height: 100%;
  padding: 24px;
  margin: 24px;
  border-radius: 8px;
  @media screen and (max-width: 576px) {
    .ant-list-item {
      flex-wrap: nowrap;
    }
    margin: 0px;
    padding: 0px;
  }
  // box-shadow: 0 -3px 42px -17px #c7d2e8;
}
.forum-page-header {
  @media screen and (max-width: 576px) {
    padding: 10px 10px;
  }
  @media screen and (max-width: 768px) {
    justify-content: flex-end;
    .ant-page-header-heading {
      justify-content: space-around;
    }
  }
}
.forum-page-header-extra-wrapper {
  background-color: #ffffff;
  flex: 1 1 auto;
  .ant-page-header-heading {
    margin-left: auto;
    align-content: space-between;
  }
  .ant-space {
    justify-content: space-around;
  }
  justify-content: center;
}
.forum-page-header-extra-container {
  display: flex;
  flex-wrap: wrap;
}
.forum-page-header-extra-spacer {
  flex-wrap: wrap;
  @media screen and (max-width: 576px) {
    flex-flow: column;
    .ant-space-item {
      width: 100%;
    }
  }
}
.multiselect {
  min-width: 180px;
  margin: auto;
  flex: 1;
  @media screen and (max-width: 576px) {
    min-width: 150px;
  }
}
.new-post-submit {
  float: right;
}
.feed-loader-wrapper {
  display: flex;
  justify-content: center;
}
.feed-list-wrapper {
  text-align: left;
  background: #ffffff;
  padding: 10px;
  border-radius: 8px;
}
.feed-list-wrapper:hover {
  box-shadow: -13px 0px 11px -7px #e9e9e9ab;
}
.feed-list-item {
  flex-direction: column;
  align-items: stretch;
  border-bottom: none !important;
  padding: 10px;

  border-radius: 8px;

  .ant-list-item-action {
    margin-left: auto;
  }
}
.comments-infinite-container {
  height: 300px;
  padding: 8px 24px;
  overflow: auto;
  border: 1px solid #e8e8e8;
  border-radius: 8px;
  margin: 10px;
}
.comment-list-spacer {
  width: 100%;
}
.add-comment-input {
  border-radius: 8px;
}
.comment-submit-wrapper {
  text-align: right;
}
.comment-input-wrapper {
  padding: 0 10px;
}
// .forum-search-skill-select{}
// .forum-search-type-select{}

//MESSAGES
.messages-page-wrapper {
  display: flex;
  height: 100%;
  justify-content: flex-start;
  align-items: stretch;
  .ant-tabs {
    flex: 1;
  }
  .ant-tabs-content {
    height: 100%;
  }
}
.messages-tab-pane {
  height: 100%;
}
.messager-wrapper {
  display: flex;
  flex-direction: column;
  position: relative;
  height: 100%;
  .ant-page-header {
    background-color: #0015290f;
  }
}
.message-preview-pane {
  display: flex;
  flex: 1;
  height: 100%;
  width: 100%;
  flex-flow: column;
  justify-content: flex-end;
  padding-bottom: 10px;
  .text-left {
    float: left;
    .messager-preview-message-container {
      border-radius: 8px 0 8px 0;
    }
  }
  .text-right {
    float: right;

    .messager-preview-message-container {
      border-radius: 0 8px 0 8px;
    }
  }
}
.message-input-wrapper {
  display: flex;
  flex-wrap: nowrap;
  justify-content: flex-start;
}
.message-send-button {
  height: 100%;
}
.messager-preview-message {
  color: white;
}
.messager-preview-message-container {
  padding: 10px 10px;
  background-color: #3982ee;
}
.message-menu-item-avatar {
  .ant-avatar-string {
    line-height: 33px;
  }
}
.messager-user-details-card {
  padding-top: 24px;
  border: none;
  background-color: transparent;
  .user-details-avatar {
    height: 80px;
    width: 80px;
  }
  .ant-card-meta-title,
  .ant-card-meta-description {
    color: #fff;
  }
}
.messager-sidebar-menu-item {
  margin: auto;
}
// .message-input {
//   width: 100%;
// }

//************** common utils styles****************//

//App titles
.app-titles {
  margin: 0.5rem;
  .xlarge {
    font-size: 2.5rem;
  }
  .large {
    font-size: 2rem;
  }
  .medium {
    font-size: 1.5rem;
  }
  .small {
    font-size: 1rem;
  }
  .strong {
    font-weight: 600;
  }
  .xstrong {
    font-weight: 900;
  }
}

.app-texts {
  margin: 0.5rem;
  .xlarge {
    font-size: 2rem;
  }
  .large {
    font-size: 1.5rem;
  }
  .mediumlarge {
    font-size: 1.25rem;
  }
  .medium {
    font-size: 1rem;
  }
  .small {
    font-size: 0.75rem;
  }
  .xsmall {
    font-size: 0.5rem;
  }

  .strong {
    font-weight: 600;
  }
  .xstrong {
    font-weight: 900;
  }
}

.app-button {
  margin: 0.5rem;
  .large {
    font-size: 1.5rem;
  }
  .medium {
    font-size: 1rem;
  }
  .small {
    font-size: 0.75rem;
  }
  .xsmall {
    font-size: 0.5rem;
  }
}

.view-wrapper {
  height: 100%;
  width: 100%;
}
.view-container {
  max-width: 1600px;
}

.full-wide {
  width: 100%;
}

.text-left {
  text-align: left;
}
.text-right {
  text-align: right;
}

.text-white {
  color: #ffffff;
}

